# alice-sleepy-helper-skill

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
content/: activities.csv  tips.csv  tips_topics.csv
scripts/: import_content.py
skill/: __main__.py  config.py  entities.py  exceptions.py  handlers.py  main.py  sh_exceptions.py  sleep_calculator.py  states.py  user_manager.py  utils.py
skill/dataconvert/: base_converter.py  ya_converter.py
skill/db/: sa_db_settings.py
skill/db/migrations/alembic/: env.py
skill/db/migrations/alembic/versions/: 13f56def336c_initial.py  17ae56c4d705_added_unique_fields_and_indexes.py
skill/db/models/: sa_models.py
skill/db/repos/: base_repo.py  get_repo.py  sa_repo.py
skill/messages/: abc_messages.py  base_messages.py  context_flags.py  debug.py  ru_messages.py  select.py  unicode_literals.py
tests/: conftest.py  sa_db_settings.py  test_api.py  test_dataconvert.py
tests/db/: sa_db_settings.py  test_repo.py
tests/user_manager/: sa_db_settings.py  test_user_manager.py
