[tool.poetry]
name = "alice-hackathon-2023"
version = "0.1.0"
description = "A skill for Yandex Alice Hackathon 2023"
authors = ["Kamil Biktimirov <Biktimirov.kamil@yandex.ru>"]
readme = "README.md"
packages = [{include = "alice_hackathon_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
aioalice = "^1.5.1"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
asyncpg = "^0.27.0"
pytz = "^2023.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"



[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
aiosqlite = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
